--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-theme.min.css">
 	<!-- Add in locally stored min version of bootstrap javascript -->
 	<script src="assets/javascript/bootstrap.min.js"></script>
-
+	<!-- Date formater -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.min.js" integrity="sha256-YVu3IT7nGTfxru7MQiv/TgOnffsbPuvXHRXuw1KzxWc=" crossorigin="anonymous"></script>	
 	<!-- Make final css adjustments with personal stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!--webicon-->
@@ -133,7 +134,6 @@
 
 	<!-- Link to the game javascript -->
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
-
 </body>
 
 </html>
