--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					  <h4 class="modal-title">Hi there! Lets do some vacation planning research</h4>
 					</div>
 					<div class="modal-body">
-					  <p>On this site you will see a group of buttons, in blue, with the names of possible vacation destinations. You can click on those already provided, or use the search bar, in the top right hand corner and add another destination not included.</p>
+					  <p>On this site you will see a group of buttons, in blue, with the names of possible vacation destinations. You can click on those already provided, or use the search bar, in the top right hand corner and add another destination not already included.</p>
 					  <p>Additionally, you will be provided with the current weather information for the place selected. Hopefully, this can help you decide on your preferred location. </p>
 					  <p>Once you click a place you will see 12 animated gifs which will give you some insight into the given location. Perhaps you'll see landmarks and well known locations, or maybe you'll be surprised.</p>
 					</div>
